--- a/src/components/Information/Information.scss
+++ b/src/components/Information/Information.scss
@@ -1,13 +1,11 @@
-.Infomation__icon {
+.Information__icon {
   width: 20px;
   height: 20px;
   margin-right: 11.8px;
   cursor: pointer;
 }
 
-.Infomation__contact {
-  margin-top: 50px;
-
+.Information__contact {
   & > span {
     display: flex;
     justify-content: flex-start;
