--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -16,7 +16,18 @@
     position: absolute;
     top: -15px;
     left: -17px;
-    background-color: red;
+    background: linear-gradient(
+      45deg,
+      rgba(255, 255, 255, 0.9) 0,
+      rgba(255, 255, 255, 0.9) 25%,
+      rgba(44, 44, 44, 0.7) 25%,
+      rgba(44, 44, 44, 0.7) 50%,
+      rgba(255, 255, 255, 0.9) 50%,
+      rgba(255, 255, 255, 0.9) 75%,
+      rgba(44, 44, 44, 0.7) 75%,
+      rgba(44, 44, 44, 0.7)
+    );
+    background-size: 5px 5px;
   }
 
   &::after {
@@ -27,7 +38,18 @@
     position: absolute;
     top: -15px;
     left: -2px;
-    background-color: red;
+    background: linear-gradient(
+      45deg,
+      rgba(255, 255, 255, 0.9) 0,
+      rgba(255, 255, 255, 0.9) 25%,
+      rgba(44, 44, 44, 0.7) 25%,
+      rgba(44, 44, 44, 0.7) 50%,
+      rgba(255, 255, 255, 0.9) 50%,
+      rgba(255, 255, 255, 0.9) 75%,
+      rgba(44, 44, 44, 0.7) 75%,
+      rgba(44, 44, 44, 0.7)
+    );
+    background-size: 5px 5px;
   }
 
   & h1 {
